--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <!-- Navigation Bar -->
     <div class="navbar">
       <div class="col-xs-2 pull-right"></div>
-        <div class="col-xs-10" id="topbar"> Howard Center for Investigative Journalism | CNS | PBS<span class="topbar-mobile"> Newshour</span>
+        <div class="col-xs-10" id="topbar"> Howard Center for Investigative Journalism | CNS | PBS<span class="topbar-mobile"> NewsHour</span>
         </div>
         <div class="col-xs-2 pull-left" id="social-icons"><i class="fa icon-twitter">&#xf099;</i> &nbsp <i class="fa icon-facebook">&#xf09a;</i></div>
     </div>
@@ -265,16 +265,24 @@
 
   <h1 style="color: #D9B269; font-size: 1.5em;">About This Project</h1><br>
     <p class="about">This work is a collaboration between the University of Maryland's Howard Center for Investigative Journalism and Capital News Service and the PBS NewsHour.
-    </p><br>
+    </p><br><br>
+
+    <div class="row sponsor-row">
+      <div class="col-md-4"><img src="images/sponsor-howard.png" class="sponsor" id="hc"  alt="Howard Center for Investigative Journalism logo"></div>
+
+      <div class="col-md-4"><img src="images/sponsor-cns.png" class="sponsor" id="cns" alt="Capital News Service logo"></div>
+
+      <div class="col-md-4"><img src="images/sponsor-pbs.png" class="sponsor" id="pbs" alt="PBS NewsHour logo"></div>
+    </div><br>
 
 
   <h1 style="color: #D9B269; font-size: 1.5em;">Credits</h1><br>
     <p class="credits">
       <b>Web design and development:</b> Camila Velloso<br><br>
-      <b>Reporting and writing:</b> Hannah Gaskill, Camila Velloso, Emily Top, Athiyah Azeem, Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Pery, Sara Salimi, DeLon Thornton and Victoria Daniels<br><br>
-      <b>Data analysis:</b> Riin Aljas, Camila Velloso and Hannah Gaskill<br><br>
-      <b>Video:</b> Emily Top, Camila Velloso, Athiyah Azeem, Hannah Gaskill Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Pery, Sara Salimi and DeLon Thornton<br><br>
-      <b>Graphics:</b> Camila Velloso, Hannah Gaskill and Ally Tobler<br><br>
+      <b>Reporting and writing:</b> Athiyah Azeem, Victoria Daniels, Hannah Gaskill, Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Perry, Sara Salimi, Delon Thornton, Emily Top and Camila Velloso<br><br>
+      <b>Data analysis:</b> Riin Aljas, Hannah Gaskill and Camila Velloso<br><br>
+      <b>Video:</b> Athiyah Azeem, Hannah Gaskill, Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Perry, Sara Salimi, Delon Thornton, Emily Top and Camila Velloso<br><br>
+      <b>Graphics:</b> Hannah Gaskill, Ally Tobler and Camila Velloso<br><br>
       <b>Project editors:</b> Kathy Best, Tom Bettag, Karen Denny, Marty Kaiser, Adam Marton and Sean Mussenden<br><br>
       <b>Audience engagement:</b> Alex Pyles<br><br>
       <b>Top photo:</b> Courtesy of Maryland Department of Public Safety and Correctional Services<br><br>
@@ -283,30 +291,18 @@
     <h1 style="color: #D9B269; font-size: 1.5em;">Funders</h1><br>
       <p class="about">Support for this project comes from generous grants from the Scripps Howard Foundation, the Annie E. Casey Foundation and the University of Maryland’s Philip Merrill College of Journalism. </p><br><br>
 
+      <div class="row sponsor-row">
+        <div class="col-md-4"><img src="images/sponsor-scripps.png" class="sponsor" id="shf"  alt="Scripps Horward Foundation logo"></div>
+
+        <div class="col-md-4"><img src="images/sponsor-acf.png" class="sponsor" id="acf" alt="Annie E. Casey Foundation logo"></div>
+
+        <div class="col-md-4"><img src="images/sponsor-merrill.png" class="sponsor" id="merrill" alt="Philip Merrill College of Journalism logo"></div>
+      </div><br>
+
 
 
 
 </div><br><br><!-- END Main Container -->
-
-<div class="row row-sponsor2">
-
- <div class="col-md-4 row-sponsor"><img src="images/howard-center-logo.png" class="sponsor" id="hc"  alt="Howard Center for Investigative Journalism logo"></div>
-
- <div class="col-md-4 row-sponsor"><img src="images/cns-short1.png" class="sponsor" id="cns" alt="Capital News Service logo"></div>
-
- <div class="col-md-4 row-sponsor"><img src="images/pbs-short.png" class="sponsor" id="pbs" alt="PBS Newshour logo"></div>
-
-</div>
-
-<div class="row row-sponsor2">
-
- <div class="col-md-4 row-sponsor"><img src="images/shf-short.png" class="sponsor" id="shf"  alt="Scripps Horward Foundation logo"></div>
-
- <div class="col-md-4 row-sponsor"><img src="images/acf-short.png" class="sponsor" id="acf" alt="Annie E. Casey Foundation logo"></div>
-
- <div class="col-md-4 row-sponsor"><img src="images/merrill-short.png" class="sponsor" id="merrill" alt="Philip Merrill College of Journalism logo"></div>
-
-</div>
 
 
 <!-- Javascript for social button popups -->
