--- a/lifer-profiles.html
+++ b/lifer-profiles.html
@@ -101,7 +101,7 @@
     <!-- Navigation Bar -->
       <div class="navbar">
           <div class="col-xs-2 pull-right" id="home"><a href="index.html" style="color: white; text-decoration: none;"><i class="fa fa-home"></i>&nbsp <span class="hide-on-mobile">Home<span></a></div>
-          <div class="col-xs-8" id="topbar"> Howard Center for Investigative Journalism | CNS | PBS<span class="topbar-mobile"> Newshour</span>
+          <div class="col-xs-8" id="topbar"> Howard Center for Investigative Journalism | CNS | PBS<span class="topbar-mobile"> NewsHour</span>
           </div>
           <div class="col-xs-2 pull-left" id="social-icons"><i class="fa icon-twitter">&#xf099;</i> &nbsp <i class="fa icon-facebook">&#xf09a;</i></div>
       </div>
@@ -158,7 +158,7 @@
     <p class="state">CALVIN MCNEILL</p>
     <p class="author">By <span>JAMIE KERNER</span></p><br>
 
-    <p>Calvin McNeill was 17 when was convicted of first-degree murder in 1981. His sentence was life with the possibility of parole. But when a supposedly &quot;model prisoner&quot; on work release murdered his former girl friend and committed suicide, Maryland withdrew consideration of parole. No juveniles sentenced with life would be paroled for nearly twenty-five years. 
+    <p>Calvin McNeill was 17 when was convicted of first-degree murder in 1981. His sentence was life with the possibility of parole. But when a supposedly &quot;model prisoner&quot; on work release murdered his former girlfriend and committed suicide, Maryland withdrew consideration of parole. No juveniles sentenced with life would be paroled for nearly twenty-five years. 
 
     <br><br>McNeill has not had a single infraction in more than a quarter of a century and has earned numerous commendations from prison staff. Maryland authorities would not allow a taped interview in the prison. He spoke with &quot;PBS NewsHour&quot; correspondent John Yang by phone.</p><br><br>
 
@@ -183,11 +183,11 @@
     </p><br><br>
 
     <div class="row sponsor-row">
-      <div class="col-md-4"><img src="images/sponsor-hc.png" class="sponsor" id="hc"  alt="Howard Center for Investigative Journalism logo"></div>
+      <div class="col-md-4"><img src="images/sponsor-howard.png" class="sponsor" id="hc"  alt="Howard Center for Investigative Journalism logo"></div>
 
       <div class="col-md-4"><img src="images/sponsor-cns.png" class="sponsor" id="cns" alt="Capital News Service logo"></div>
 
-      <div class="col-md-4"><img src="images/sponsor-pbs.png" class="sponsor" id="pbs" alt="PBS Newshour logo"></div>
+      <div class="col-md-4"><img src="images/sponsor-pbs.png" class="sponsor" id="pbs" alt="PBS NewsHour logo"></div>
     </div><br>
 
 
@@ -195,10 +195,10 @@
 
     <p class="final-credits">
       <b>Web design and development:</b> Camila Velloso<br><br>
-      <b>Reporting and writing:</b> Athiyah Azeem, Victoria Daniels, Hannah Gaskill, Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Pery, Sara Salimi, DeLon Thornton, Emily Top and Camila Velloso<br><br>
-      <b>Data analysis:</b> Riin Aljas, Camila Velloso and Hannah Gaskill<br><br>
-      <b>Video:</b> Emily Top, Camila Velloso, Athiyah Azeem, Hannah Gaskill Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Pery, Sara Salimi and DeLon Thornton<br><br>
-      <b>Graphics:</b> Camila Velloso, Hannah Gaskill and Ally Tobler<br><br>
+      <b>Reporting and writing:</b> Athiyah Azeem, Victoria Daniels, Hannah Gaskill, Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Perry, Sara Salimi, Delon Thornton, Emily Top and Camila Velloso<br><br>
+      <b>Data analysis:</b> Riin Aljas, Hannah Gaskill and Camila Velloso<br><br>
+      <b>Video:</b> Athiyah Azeem, Hannah Gaskill, Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Perry, Sara Salimi, Delon Thornton, Emily Top and Camila Velloso<br><br>
+      <b>Graphics:</b> Hannah Gaskill, Ally Tobler and Camila Velloso<br><br>
       <b>Project editors:</b> Kathy Best, Tom Bettag, Karen Denny, Marty Kaiser, Adam Marton and Sean Mussenden<br><br>
       <b>Audience engagement:</b> Alex Pyles<br><br>
       <b>Top photo:</b> Courtesy of Maryland Department of Public Safety and Correctional Services<br><br>
