--- a/other-states.html
+++ b/other-states.html
@@ -100,7 +100,7 @@
     <!-- Navigation Bar -->
       <div class="navbar">
           <div class="col-xs-2 pull-right" id="home"><a href="index.html" style="color: white; text-decoration: none;"><i class="fa fa-home"></i>&nbsp <span class="hide-on-mobile">Home<span></a></div>
-          <div class="col-xs-8" id="topbar"> Howard Center for Investigative Journalism | CNS | PBS<span class="topbar-mobile"> Newshour</span>
+          <div class="col-xs-8" id="topbar"> Howard Center for Investigative Journalism | CNS | PBS<span class="topbar-mobile"> NewsHour</span>
           </div>
           <div class="col-xs-2 pull-left" id="social-icons"><i class="fa icon-twitter">&#xf099;</i> &nbsp <i class="fa icon-facebook">&#xf09a;</i></div>
       </div>
@@ -121,7 +121,7 @@
 
   <!-- Author and Date -->
     <p class="author">By <span>DOMINIQUE JANIFER</span><br> and <span>ATHIYAH AZEEM </span></p>
-    <p class="date">NOVEMBER 4, 2019</p><br><br>
+    <p class="date">DECEMBER 9, 2019</p><br><br>
 
   <!-- Article Body -->
     <p>In 1988, George H. W. Bush successfully labeled his presidential opponent, Michael Dukakis, as someone who coddled criminals, setting the stage for the early 1990s, when politicians across the country tried to outdo one another in being tougher on crime.</p><br><br>
@@ -141,8 +141,8 @@
     <!-- first graphic container-->
     <div class="incarceration-graph"><br>
         <div class="graphic-container">
-          <div class="chart-title"><b>Incarceration numbers for juvenile lifers in Michigan</b></div>
-          <div class="chart-description">The number of juveniles sentenced to life without parole spiked in the '90s. </div><br>
+          <div class="chart-title"><b>Crime numbers for juvenile lifers in Michigan</b></div>
+          <div class="chart-description">Similar to other states, the number of juveniles in Michigan, especially black juveniles, who committed crimes and were subsequently arrested and sentenced to life without parole peaked in the '90s. </div><br>
           <div class="chart-author">By CAMILA VELLOSO</div><br>
         </div>
         <div id="incarceration1"></div><br>
@@ -201,16 +201,24 @@
     <p class="end-gold" style="color: #D9B269; font-size: 1.5em;">About This Project</p><br>
 
     <p class="about">This work is a collaboration between the University of Maryland's Howard Center for Investigative Journalism and Capital News Service and the PBS NewsHour.
-    </p><br>
+    </p><br><br>
+
+    <div class="row sponsor-row">
+      <div class="col-md-4"><img src="images/sponsor-howard.png" class="sponsor" id="hc"  alt="Howard Center for Investigative Journalism logo"></div>
+
+      <div class="col-md-4"><img src="images/sponsor-cns.png" class="sponsor" id="cns" alt="Capital News Service logo"></div>
+
+      <div class="col-md-4"><img src="images/sponsor-pbs.png" class="sponsor" id="pbs" alt="PBS NewsHour logo"></div>
+    </div><br>
 
     <p class="end-gold" style="color: #D9B269; font-size: 1.5em;">Credits</p><br>
 
     <p class="final-credits">
       <b>Web design and development:</b> Camila Velloso<br><br>
-      <b>Reporting and writing:</b> Hannah Gaskill, Camila Velloso, Emily Top, Athiyah Azeem, Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Pery, Sara Salimi, DeLon Thornton and Victoria Daniels<br><br>
-      <b>Data analysis:</b> Riin Aljas, Camila Velloso and Hannah Gaskill<br><br>
-      <b>Video:</b> Emily Top, Camila Velloso, Athiyah Azeem, Hannah Gaskill Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Pery, Sara Salimi and DeLon Thornton<br><br>
-      <b>Graphics:</b> Camila Velloso, Hannah Gaskill and Ally Tobler<br><br>
+      <b>Reporting and writing:</b> Athiyah Azeem, Victoria Daniels, Hannah Gaskill, Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Perry, Sara Salimi, Delon Thornton, Emily Top and Camila Velloso<br><br>
+      <b>Data analysis:</b> Riin Aljas, Hannah Gaskill and Camila Velloso<br><br>
+      <b>Video:</b> Athiyah Azeem, Hannah Gaskill, Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Perry, Sara Salimi, Delon Thornton, Emily Top and Camila Velloso<br><br>
+      <b>Graphics:</b> Hannah Gaskill, Ally Tobler and Camila Velloso<br><br>
       <b>Project editors:</b> Kathy Best, Tom Bettag, Karen Denny, Marty Kaiser, Adam Marton and Sean Mussenden<br><br>
       <b>Audience engagement:</b> Alex Pyles<br><br>
       <b>Top photo:</b> Courtesy of Maryland Department of Public Safety and Correctional Services<br><br>
@@ -219,28 +227,17 @@
     <p class="end-gold" style="color: #D9B269; font-size: 1.5em;">Funders</p><br>
       <p class="about">Support for this project comes from generous grants from the Scripps Howard Foundation, the Annie E. Casey Foundation and the University of Maryland’s Philip Merrill College of Journalism. </p><br><br>
 
+      <div class="row sponsor-row">
+        <div class="col-md-4"><img src="images/sponsor-scripps.png" class="sponsor" id="shf"  alt="Scripps Horward Foundation logo"></div>
+
+        <div class="col-md-4"><img src="images/sponsor-acf.png" class="sponsor" id="acf" alt="Annie E. Casey Foundation logo"></div>
+
+        <div class="col-md-4"><img src="images/sponsor-merrill.png" class="sponsor" id="merrill" alt="Philip Merrill College of Journalism logo"></div>
+      </div><br>
+
 </div><br><br>
 </div> <!-- CLOSE Story Container -->
 
-<div class="row row-sponsor2">
-
- <div class="col-md-4 row-sponsor"><img src="images/howard-center-logo.png" class="sponsor" id="hc"  alt="Howard Center for Investigative Journalism logo"></div>
-
- <div class="col-md-4 row-sponsor"><img src="images/cns.png" class="sponsor" id="cns" alt="Capital News Service logo"></div>
-
- <div class="col-md-4 row-sponsor"><img src="images/pbs-logo.png" class="sponsor" id="pbs" alt="PBS Newshour logo"></div>
-
-</div>
-
-<div class="row row-sponsor2">
-
- <div class="col-md-4 row-sponsor"><img src="images/scripps-howard-foundation.png" class="sponsor" id="shf"  alt="Scripps Horward Foundation logo"></div>
-
- <div class="col-md-4 row-sponsor"><img src="images/acf.png" class="sponsor" id="acf" alt="Annie E. Casey Foundation logo"></div>
-
- <div class="col-md-4 row-sponsor"><img src="images/merrill2.png" class="sponsor" id="merrill" alt="Philip Merrill College of Journalism logo"></div>
-
-</div>
 
 
 <!-- Branding disappears on scroll-->
@@ -280,7 +277,8 @@
                data: {
                    columns: [
                      ['Black juveniles', 3, 17, 67, 107, 50, 14],
-                     ['White juveniles', 2, 7, 29, 38, 18, 2]
+                     ['White juveniles', 2, 7, 29, 38, 18, 2],
+                     ['Other juveniles', 1, 1, 2, 8, 1, 1]
                    ],
                    type: 'bar'
                },
@@ -298,63 +296,11 @@
                    }
                },
                color: {
-                 pattern: ['#D9B168', '#78A6DD', '#ee6a4b', '#60c4b2', '#973895']
+                 pattern: ['#D9B168', '#78A6DD', '#27548C', '#60c4b2', '#973895']
                }
            });
 
-           var chart1 = c3.generate({
-             bindto: '#incarceration',
-             data: {
-               x: 'x',
-               columns: [
-                 ['x', 1960, 1970, 1980, 1990, 2000,2010],
-                ['Black juveniles', 3, 17, 67, 107, 50, 14],
-                ['White juveniles', 2, 7, 29, 38, 18, 2]
-               ]
-             },
-             color: {
-               pattern: ['#D9B269', '#78A6DD', '#ee6a4b', '#60c4b2', '#973895']
-             }
-           });
 
-
-           var chart2 = c3.generate({
-             bindto: '#age-released',
-               data: {
-                   columns: [
-                       ['# juvenile lifers', 1, 65, 70, 29, 1, 15]
-                   ],
-                   type: 'bar'
-               },
-               axis: {
-                   x: {
-                       type: 'category',
-                       categories: ['25yrs-40yrs', '25-29yrs-60yrs', '30-39yrs-60yrs', '40yrs-60yrs', '40yrs-75yrs', 'Life']
-                   },
-                   rotated: true
-               },
-               color: {
-                 pattern: ['#78A6DD', '#D9B168', '#27548C', '#689AD9', '#973895']
-               },
-           });
-
-
-
-
-           var chart3 = c3.generate({
-             bindto: '#incarceration2',
-             data: {
-               x: 'x',
-               columns: [
-                 ['x', 2016, 2017, 2018,2019],
-                ['Black juveniles', 34, 58, 24, 12],
-                ['White juveniles', 7, 11, 10, 13]
-               ]
-             },
-             color: {
-               pattern: ['#D9B269', '#78A6DD', '#ee6a4b', '#60c4b2', '#973895']
-             }
-           });
 
 </script>
 
