--- a/pennsylvania.html
+++ b/pennsylvania.html
@@ -100,7 +100,7 @@
     <!-- Navigation Bar -->
       <div class="navbar">
           <div class="col-xs-2 pull-right" id="home"><a href="index.html" style="color: white; text-decoration: none;"><i class="fa fa-home"></i>&nbsp <span class="hide-on-mobile">Home<span></a></div>
-          <div class="col-xs-8" id="topbar"> Howard Center for Investigative Journalism | CNS | PBS<span class="topbar-mobile"> Newshour</span>
+          <div class="col-xs-8" id="topbar"> Howard Center for Investigative Journalism | CNS | PBS<span class="topbar-mobile"> NewsHour</span>
           </div>
           <div class="col-xs-2 pull-left" id="social-icons"><i class="fa icon-twitter">&#xf099;</i> &nbsp <i class="fa icon-facebook">&#xf09a;</i></div>
       </div>
@@ -123,10 +123,10 @@
 
   <!-- Author and date -->
     <p class="author">By <span>CAMILA VELLOSO</span></p>
-    <p class="date">NOVEMBER 4, 2019</p><br><br>
+    <p class="date">DECEMBER 9, 2019</p><br><br>
 
   <!-- Article Body -->
-    <p class="dateline">PHILADELPHIA, Pennsylvania &mdash; Joseph Baynes spent 41 years behind bars, locked up at age 17 for his role in a fatal robbery.</p><br><br>
+    <p class="dateline">PHILADELPHIA &mdash; Joseph Baynes spent 41 years behind bars, locked up at age 17 for his role in a fatal robbery.</p><br><br>
 
     <p>Convicted of second-degree murder in 1975, Baynes received mandatory life without parole under Pennsylvania’s stringent sentencing laws.</p><br><br>
 
@@ -467,16 +467,24 @@
     <p class="end-gold" style="color: #D9B269; font-size: 1.5em;">About This Project</p><br>
 
     <p class="about">This work is a collaboration between the University of Maryland's Howard Center for Investigative Journalism and Capital News Service and the PBS NewsHour.
-    </p><br>
+    </p><br><br>
+
+    <div class="row sponsor-row">
+      <div class="col-md-4"><img src="images/sponsor-howard.png" class="sponsor" id="hc"  alt="Howard Center for Investigative Journalism logo"></div>
+
+      <div class="col-md-4"><img src="images/sponsor-cns.png" class="sponsor" id="cns" alt="Capital News Service logo"></div>
+
+      <div class="col-md-4"><img src="images/sponsor-pbs.png" class="sponsor" id="pbs" alt="PBS NewsHour logo"></div>
+    </div><br>
 
     <p class="end-gold" style="color: #D9B269; font-size: 1.5em;">Credits</p><br>
 
     <p class="final-credits">
       <b>Web design and development:</b> Camila Velloso<br><br>
-      <b>Reporting and writing:</b> Hannah Gaskill, Camila Velloso, Emily Top, Athiyah Azeem, Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Pery, Sara Salimi, DeLon Thornton and Victoria Daniels<br><br>
-      <b>Data analysis:</b> Riin Aljas, Camila Velloso and Hannah Gaskill<br><br>
-      <b>Video:</b> Emily Top, Camila Velloso, Athiyah Azeem, Hannah Gaskill Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Pery, Sara Salimi and DeLon Thornton<br><br>
-      <b>Graphics:</b> Camila Velloso, Hannah Gaskill and Ally Tobler<br><br>
+      <b>Reporting and writing:</b> Athiyah Azeem, Victoria Daniels, Hannah Gaskill, Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Perry, Sara Salimi, Delon Thornton, Emily Top and Camila Velloso<br><br>
+      <b>Data analysis:</b> Riin Aljas, Hannah Gaskill and Camila Velloso<br><br>
+      <b>Video:</b> Athiyah Azeem, Hannah Gaskill, Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Perry, Sara Salimi, Delon Thornton, Emily Top and Camila Velloso<br><br>
+      <b>Graphics:</b> Hannah Gaskill, Ally Tobler and Camila Velloso<br><br>
       <b>Project editors:</b> Kathy Best, Tom Bettag, Karen Denny, Marty Kaiser, Adam Marton and Sean Mussenden<br><br>
       <b>Audience engagement:</b> Alex Pyles<br><br>
      <b>Top photo:</b> Camila Velloso, Capital News Service<br><br>
@@ -485,29 +493,18 @@
     <p class="end-gold" style="color: #D9B269; font-size: 1.5em;">Funders</p><br>
       <p class="about">Support for this project comes from generous grants from the Scripps Howard Foundation, the Annie E. Casey Foundation and the University of Maryland’s Philip Merrill College of Journalism. </p><br><br>
 
+      <div class="row sponsor-row">
+        <div class="col-md-4"><img src="images/sponsor-scripps.png" class="sponsor" id="shf"  alt="Scripps Horward Foundation logo"></div>
+
+        <div class="col-md-4"><img src="images/sponsor-acf.png" class="sponsor" id="acf" alt="Annie E. Casey Foundation logo"></div>
+
+        <div class="col-md-4"><img src="images/sponsor-merrill.png" class="sponsor" id="merrill" alt="Philip Merrill College of Journalism logo"></div>
+      </div><br>
+
 </div><br><br>
 </div><!-- CLOSE Story Container -->
 
 
-<div class="row row-sponsor2">
-
- <div class="col-md-4 row-sponsor"><img src="images/howard-center-logo.png" class="sponsor" id="hc"  alt="Howard Center for Investigative Journalism logo"></div>
-
- <div class="col-md-4 row-sponsor"><img src="images/cns.png" class="sponsor" id="cns" alt="Capital News Service logo"></div>
-
- <div class="col-md-4 row-sponsor"><img src="images/pbs-logo.png" class="sponsor" id="pbs" alt="PBS Newshour logo"></div>
-
-</div>
-
-<div class="row row-sponsor2">
-
- <div class="col-md-4 row-sponsor"><img src="images/scripps-howard-foundation.png" class="sponsor" id="shf"  alt="Scripps Horward Foundation logo"></div>
-
- <div class="col-md-4 row-sponsor"><img src="images/acf.png" class="sponsor" id="acf" alt="Annie E. Casey Foundation logo"></div>
-
- <div class="col-md-4 row-sponsor"><img src="images/merrill2.png" class="sponsor" id="merrill" alt="Philip Merrill College of Journalism logo"></div>
-
-</div>
 
 <!-- Branding disappears on scroll-->
 <script>
