--- a/three-states.html
+++ b/three-states.html
@@ -17,14 +17,14 @@
     <!-- Twitter Card data -->
     <meta name="twitter:title" content="Parole In The Hands Of Governors">
     <meta name="twitter:description" content="In most states parole commissions decide who should be released. Only three require the governor to sign paroles. Each state has handled the court’s rulings differently.">
-    <meta name="twitter:image" content="https://cnsmaryland.org/interactives/fall-2019/images/twitter-three.jpg">
+    <meta name="twitter:image" content="https://cnsmaryland.org/interactives/fall-2019/behind-bars/images/twitter-three.jpg">
     <meta name="twitter:card" content="summary_large_image">
 
     <!-- Open Graph data for Facebook -->
     <meta property="og:title" content="Parole In The Hands Of Governors" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="https://cnsmaryland.org/interactives/fall-2019/behind-bars/three-states.html" />
-    <meta property="og:image" content="https://cnsmaryland.org/interactives/fall-2019/images/fb-three.jpg" />
+    <meta property="og:image" content="https://cnsmaryland.org/interactives/fall-2019/behind-bars/images/fb-three.jpg" />
     <meta property="og:image:width" content="1200px" />
     <meta property="og:image:height" content="630px" />
     <meta property="og:description" content="In most states parole commissions decide who should be released. Only three require the governor to sign paroles. Each state has handled the court’s rulings differently." />
@@ -99,7 +99,7 @@
     <!-- Navigation Bar -->
       <div class="navbar">
           <div class="col-xs-2 pull-right" id="home"><a href="index.html" style="color: white; text-decoration: none;"><i class="fa fa-home"></i>&nbsp <span class="hide-on-mobile">Home<span></a></div>
-          <div class="col-xs-8" id="topbar"> Howard Center for Investigative Journalism | CNS | PBS<span class="topbar-mobile"> Newshour</span>
+          <div class="col-xs-8" id="topbar"> Howard Center for Investigative Journalism | CNS | PBS<span class="topbar-mobile"> NewsHour</span>
           </div>
           <div class="col-xs-2 pull-left" id="social-icons"><i class="fa icon-twitter">&#xf099;</i> &nbsp <i class="fa icon-facebook">&#xf09a;</i></div>
       </div>
@@ -120,7 +120,7 @@
 
   <!-- Author and Date -->
     <p class="author">By <span>JAMIE KERNER</span> and <span>SARA SALIMI</span></p>
-    <p class="date">NOVEMBER 4, 2019</p><br><br>
+    <p class="date">DECEMBER 9, 2019</p><br><br>
 
   <!-- Article Body -->
     <p>Maryland is one of only three states whose governors make the final decision on parole for people sentenced to life. The other two, Oklahoma and California, take very different paths.</p><br><br>
@@ -183,16 +183,24 @@
     <p class="end-gold" style="color: #D9B269; font-size: 1.5em;">About This Project</p><br>
 
     <p class="about">This work is a collaboration between the University of Maryland's Howard Center for Investigative Journalism and Capital News Service and the PBS NewsHour.
-    </p><br>
+    </p><br><br>
+
+    <div class="row sponsor-row">
+      <div class="col-md-4"><img src="images/sponsor-howard.png" class="sponsor" id="hc"  alt="Howard Center for Investigative Journalism logo"></div>
+
+      <div class="col-md-4"><img src="images/sponsor-cns.png" class="sponsor" id="cns" alt="Capital News Service logo"></div>
+
+      <div class="col-md-4"><img src="images/sponsor-pbs.png" class="sponsor" id="pbs" alt="PBS NewsHour logo"></div>
+    </div><br>
 
     <p class="end-gold" style="color: #D9B269; font-size: 1.5em;">Credits</p><br>
 
     <p class="final-credits">
       <b>Web design and development:</b> Camila Velloso<br><br>
-      <b>Reporting and writing:</b> Hannah Gaskill, Camila Velloso, Emily Top, Athiyah Azeem, Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Pery, Sara Salimi, DeLon Thornton and Victoria Daniels<br><br>
-      <b>Data analysis:</b> Riin Aljas, Camila Velloso and Hannah Gaskill<br><br>
-      <b>Video:</b> Emily Top, Camila Velloso, Athiyah Azeem, Hannah Gaskill Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Pery, Sara Salimi and DeLon Thornton<br><br>
-      <b>Graphics:</b> Camila Velloso, Hannah Gaskill and Ally Tobler<br><br>
+      <b>Reporting and writing:</b> Athiyah Azeem, Victoria Daniels, Hannah Gaskill, Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Perry, Sara Salimi, Delon Thornton, Emily Top and Camila Velloso<br><br>
+      <b>Data analysis:</b> Riin Aljas, Hannah Gaskill and Camila Velloso<br><br>
+      <b>Video:</b> Athiyah Azeem, Hannah Gaskill, Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Perry, Sara Salimi, Delon Thornton, Emily Top and Camila Velloso<br><br>
+      <b>Graphics:</b> Hannah Gaskill, Ally Tobler and Camila Velloso<br><br>
       <b>Project editors:</b> Kathy Best, Tom Bettag, Karen Denny, Marty Kaiser, Adam Marton and Sean Mussenden<br><br>
       <b>Audience engagement:</b> Alex Pyles<br><br>
       <b>Top photo:</b> Julie Depenbrock, Capital News Service<br><br>
@@ -201,29 +209,18 @@
     <p class="end-gold" style="color: #D9B269; font-size: 1.5em;">Funders</p><br>
       <p class="about">Support for this project comes from generous grants from the Scripps Howard Foundation, the Annie E. Casey Foundation and the University of Maryland’s Philip Merrill College of Journalism. </p><br><br>
 
+      <div class="row sponsor-row">
+        <div class="col-md-4"><img src="images/sponsor-scripps.png" class="sponsor" id="shf"  alt="Scripps Horward Foundation logo"></div>
+
+        <div class="col-md-4"><img src="images/sponsor-acf.png" class="sponsor" id="acf" alt="Annie E. Casey Foundation logo"></div>
+
+        <div class="col-md-4"><img src="images/sponsor-merrill.png" class="sponsor" id="merrill" alt="Philip Merrill College of Journalism logo"></div>
+      </div><br>
+
 </div><br><br>
 </div> <!--CLOSE Story Container -->
 
 
-<div class="row row-sponsor2">
-
- <div class="col-md-4 row-sponsor"><img src="images/howard-center-logo.png" class="sponsor" id="hc"  alt="Howard Center for Investigative Journalism logo"></div>
-
- <div class="col-md-4 row-sponsor"><img src="images/cns.png" class="sponsor" id="cns" alt="Capital News Service logo"></div>
-
- <div class="col-md-4 row-sponsor"><img src="images/pbs-logo.png" class="sponsor" id="pbs" alt="PBS Newshour logo"></div>
-
-</div>
-
-<div class="row row-sponsor2">
-
- <div class="col-md-4 row-sponsor"><img src="images/scripps-howard-foundation.png" class="sponsor" id="shf"  alt="Scripps Horward Foundation logo"></div>
-
- <div class="col-md-4 row-sponsor"><img src="images/acf.png" class="sponsor" id="acf" alt="Annie E. Casey Foundation logo"></div>
-
- <div class="col-md-4 row-sponsor"><img src="images/merrill2.png" class="sponsor" id="merrill" alt="Philip Merrill College of Journalism logo"></div>
-
-</div>
 
 <!-- Branding disappears on scroll-->
 <script>
