--- a/lifer-profiles.html
+++ b/lifer-profiles.html
@@ -326,13 +326,13 @@
 <!-- Variables for social media icon popups -->
   <script type="text/javascript">
     //Twitter variables
-    var tweet = "Growing Up Behind Bars: An investigation into the status of juvenile lifers across the country"; //Tweet text
+    var tweet = "Meet The Juvenile Lifers: Earl Young and Calvin McNeill went to prison determined to win parole. They have spent a combined 72 years behind bars."; //Tweet text
     var url = "https://cnsmaryland.org/interactives/fall-2019/behind-bars/lifer-profiles.html"; //Interactive URL
 
     //Facebook variables
     var picture = "https://cnsmaryland.org/interactives/fall-2019/behind-bars/images/fb-lifers.jpg"; //Picture URL
-    var title = "Growing Up Behind Bars"; //Post title
-    var description = "An investigation into the status of juvenile lifers across the country"; //Post description
+    var title = "Meet The Juvenile Lifers"; //Post title
+    var description = "Earl Young and Calvin McNeill went to prison determined to win parole. They have spent a combined 72 years behind bars."; //Post description
     var url = "https://cnsmaryland.org/interactives/fall-2019/behind-bars/lifer-profiles.html"; //Interactive URL
 
   </script>
