--- a/lomax.html
+++ b/lomax.html
@@ -295,13 +295,13 @@
 <!-- Variables for social media icon popups -->
   <script type="text/javascript">
     //Twitter variables
-    var tweet = "Growing Up Behind Bars: An investigation into the status of juvenile lifers across the country"; //Tweet text
+    var tweet = "The Victims’ Side: Juvenile lifers have committed horrible crimes that have stolen loved ones from their families. How do we deal with their pain?"; //Tweet text
     var url = "https://cnsmaryland.org/interactives/fall-2019/behind-bars/lomax.html"; //Interactive URL
 
     //Facebook variables
-    var picture = "INSERT FACEBOOK THUMBNAIL URL"; //Picture URL
-    var title = "Growing Up Behind Bars"; //Post title
-    var description = "An investigation into the status of juvenile lifers across the country"; //Post description
+    var picture = "https://cnsmaryland.org/interactives/fall-2019/behind-bars/images/fb-lomax.jpg"; //Picture URL
+    var title = "The Victims’ Side"; //Post title
+    var description = "Juvenile lifers have committed horrible crimes that have stolen loved ones from their families. How do we deal with their pain?"; //Post description
     var url = "https://cnsmaryland.org/interactives/fall-2019/behind-bars/lomax.html"; //Interactive URL
 
   </script>
