--- a/other-states.html
+++ b/other-states.html
@@ -141,8 +141,8 @@
     <!-- first graphic container-->
     <div class="incarceration-graph"><br>
         <div class="graphic-container">
-          <div class="chart-title"><b>Crime numbers for juvenile lifers in Michigan</b></div>
-          <div class="chart-description">Similar to other states, the number of juveniles in Michigan, especially black juveniles, who committed crimes and were subsequently arrested and sentenced to life without parole peaked in the '90s. </div><br>
+          <div class="chart-title"><b>Examining the racial breakdown of Michigan's juvenile lifer population by decade</b></div>
+          <div class="chart-description">The number of juveniles in Michigan who committed crimes and were subsequently sentenced to life without parole peaked in the '90s. This is especially true for black juveniles.</div><br>
           <div class="chart-author">By CAMILA VELLOSO</div><br>
         </div>
         <div id="incarceration1"></div><br>
@@ -257,13 +257,13 @@
 <!-- Variables for social media icon popups -->
   <script type="text/javascript">
     //Twitter variables
-    var tweet = "Growing Up Behind Bars: An investigation into the status of juvenile lifers across the country"; //Tweet text
+    var tweet = "Michigan and Florida Go Different Routes: Both states had large numbers of juveniles sentenced to life without parole. Both have hit speed bumps as they try to respond to the Supreme Court."; //Tweet text
     var url = "https://cnsmaryland.org/interactives/fall-2019/behind-bars/other-states.html"; //Interactive URL
 
     //Facebook variables
     var picture = "https://cnsmaryland.org/interactives/fall-2019/behind-bars/images/fb-other.jpg"; //Picture URL
-    var title = "Growing Up Behind Bars"; //Post title
-    var description = "An investigation into the status of juvenile lifers across the country"; //Post description
+    var title = "Michigan and Florida Go Different Routes"; //Post title
+    var description = "Both states had large numbers of juveniles sentenced to life without parole. Both have hit speed bumps as they try to respond to the Supreme Court."; //Post description
     var url = "https://cnsmaryland.org/interactives/fall-2019/behind-bars/other-states.html"; //Interactive URL
 
   </script>
