--- a/pennsylvania.html
+++ b/pennsylvania.html
@@ -619,13 +619,13 @@
 <!-- Variables for social media icon popups -->
   <script type="text/javascript">
     //Twitter variables
-    var tweet = "Growing Up Behind Bars: An investigation into the status of juvenile lifers across the country"; //Tweet text
+    var tweet = "Pennsylvania's About-Face: In the Keystone State more than 500 juveniles served sentences of life without parole. Today many of them have been re-sentenced, many to time served."; //Tweet text
     var url = "https://cnsmaryland.org/interactives/fall-2019/behind-bars/pennsylvania.html"; //Interactive URL
 
     //Facebook variables
     var picture = "https://cnsmaryland.org/interactives/fall-2019/behind-bars/images/fb-pa.jpg"; //Picture URL
-    var title = "Growing Up Behind Bars"; //Post title
-    var description = "An investigation into the status of juvenile lifers across the country"; //Post description
+    var title = "Pennsylvania's About-Face"; //Post title
+    var description = "In the Keystone State more than 500 juveniles served sentences of life without parole. Today many of them have been re-sentenced, many to time served."; //Post description
     var url = "https://cnsmaryland.org/interactives/fall-2019/behind-bars/pennsylvania.html"; //Interactive URL
 
   </script>
