--- a/three-states.html
+++ b/three-states.html
@@ -240,13 +240,13 @@
 <!-- Variables for social media icon popups -->
   <script type="text/javascript">
     //Twitter variables
-    var tweet = "Growing Up Behind Bars: An investigation into the status of juvenile lifers across the country"; //Tweet text
+    var tweet = "Parole In The Hands Of Governors: In most states parole commissions decide who should be released. Only three require the governor to sign paroles. Each state has handled the court’s rulings differently."; //Tweet text
     var url = "https://cnsmaryland.org/interactives/fall-2019/behind-bars/three-states.html"; //Interactive URL
 
     //Facebook variables
     var picture = "https://cnsmaryland.org/interactives/fall-2019/images/fb-three.jpg"; //Picture URL
-    var title = "Growing Up Behind Bars"; //Post title
-    var description = "An investigation into the status of juvenile lifers across the country"; //Post description
+    var title = "Parole In The Hands Of Governors"; //Post title
+    var description = "In most states parole commissions decide who should be released. Only three require the governor to sign paroles. Each state has handled the court’s rulings differently."; //Post description
     var url = "https://cnsmaryland.org/interactives/fall-2019/behind-bars/three-states.html"; //Interactive URL
 
   </script>
