--- a/glendening-effect.html
+++ b/glendening-effect.html
@@ -16,7 +16,7 @@
 
     <!-- Twitter Card data -->
     <meta name="twitter:title" content="The Glendening Effect">
-    <meta name="twitter:description" content="Former Gov. Parris Glendening’s &quot;life means life&quot; policy changes criminal sentences for hundreds of prisoners. It is a decision he calls &quot;a mistake,&quot; but it’s impact continues to this day.">
+    <meta name="twitter:description" content="Former Gov. Parris Glendening’s 'life means life' policy changes criminal sentences for hundreds of prisoners. It is a decision he calls 'a mistake,' but it’s impact continues to this day.">
     <meta name="twitter:image" content="https://cnsmaryland.org/interactives/fall-2019/behind-bars/images/twitter-glendening.jpg">
     <meta name="twitter:card" content="summary_large_image">
 
@@ -27,7 +27,7 @@
     <meta property="og:image" content="https://cnsmaryland.org/interactives/fall-2019/behind-bars/images/fb-glendening.jpg" />
     <meta property="og:image:width" content="1200px" />
     <meta property="og:image:height" content="630px" />
-    <meta property="og:description" content="Former Gov. Parris Glendening’s &quot;life means life&quot; policy changes criminal sentences for hundreds of prisoners. It is a decision he calls &quot;a mistake,&quot; but it’s impact continues to this day." />
+    <meta property="og:description" content="Former Gov. Parris Glendening’s 'life means life' policy changes criminal sentences for hundreds of prisoners. It is a decision he calls 'a mistake,'' but it’s impact continues to this day." />
 
 
     <!-- Bootstrap CSS -->
@@ -463,13 +463,13 @@ var chart = c3.generate({
 <!-- Variables for social media icon popups -->
   <script type="text/javascript">
     //Twitter variables
-    var tweet = "Growing Up Behind Bars: An investigation into the status of juvenile lifers across the country"; //Tweet text
+    var tweet = "The Glendening Effect: Former Gov. Parris Glendening’s 'life means life' policy changes criminal sentences for hundreds of prisoners. It is a decision he calls 'a mistake,' but it’s impact continues to this day."; //Tweet text
     var url = "https://cnsmaryland.org/interactives/fall-2019/behind-bars/glendening-effect.html"; //Interactive URL
 
     //Facebook variables
     var picture = "https://cnsmaryland.org/interactives/fall-2019/behind-bars/images/fb-glendening.jpg"; //Picture URL
-    var title = "Growing Up Behind Bars"; //Post title
-    var description = "An investigation into the status of juvenile lifers across the country"; //Post description
+    var title = "The Glendening Effect"; //Post title
+    var description = "Former Gov. Parris Glendening’s 'life means life' policy changes criminal sentences for hundreds of prisoners. It is a decision he calls '&quot;'a mistake,'' but it’s impact continues to this day."; //Post description
     var url = "https://cnsmaryland.org/interactives/fall-2019/behind-bars/glendening-effect.html"; //Interactive URL
 
   </script>
